--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ubik-neon-syntax",
   "theme": "syntax",
-  "version": "1.0.0",
-  "description": "Dark syntax theme inspired by vim's gotham colorscheme, extended to better highlight code, with a focus on Python and Jinja2.",
+  "version": "0.0.1",
+  "description": "80's Retrofuturism, cyberpunky, neon lights, bright colors and great code readability all in one syntax featuring also language-specific higlightingp!",
   "keywords": [
     "syntax",
     "theme",
     "python",
-    "jinja"
+    "jinja",
+	"neon"
   ],
   "repository": "https://github.com/mr-ubik/atom-ubik-neon-syntax",
   "license": "MIT",
