Renaming ubik-neon-syntax to ubik-hackerman-syntax

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ubik-neon-syntax",
+  "name": "ubik-hackerman-syntax",
   "author": "Michele 'Ubik' De Simoni",
   "theme": "syntax",
   "version": "1.9.2",
